--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,10 @@ repository = "https://github.com/valsaven/npkl"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-itertools = "0.10.5"
-byte-unit = "4.0.17"
-dialoguer = "0.10.2"
-walkdir = "2.3.2"
+itertools = "0.11.0"
+byte-unit = "4.0.19"
+dialoguer = "0.10.4"
+walkdir = "2.4.0"
+
+[dev-dependencies]
+tempfile = "3.8.0"
